<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundgradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/suggestedRecipe"
            android:gravity="center"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="5dp">

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title1"
            android:background="@drawable/placeholder"
            android:onClick="searchResults"
            android:id="@+id/home_button_one" />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/placeholder"
            android:text="@string/title2"
            android:onClick="recipe"
            android:id="@+id/home_button_two" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="5dp">

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/placeholder"
            android:text="@string/title3"
            android:id="@+id/home_button_three" />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/placeholder"
            android:text="@string/title4"
            android:id="@+id/home_button_four" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="5dp">

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/placeholder"
            android:text="@string/title5"
            android:id="@+id/home_button_five" />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/placeholder"
            android:text="@string/title6"
            android:id="@+id/home_button_six" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:padding="5dp">

        <TextView android:id="@+id/new_suggestions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/newSuggestions"
            android:gravity="center"
            android:textSize="16sp"
            android:onClick="NewRecipies"/>
    </LinearLayout>

</LinearLayout>
