<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="centerCrop"
            android:alpha="0.5"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:focusableInTouchMode="true"
            style="@android:style/TextAppearance.DeviceDefault.Medium">


            <ImageView android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.25"/>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.25"
                android:textColorHint="#ffffff">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hintEmail"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.25"
                android:textColorHint="#ffffff">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hintPassword"
                    android:textColorHint="#ffffff"
                    android:textColor="#ffffff"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/login"
                android:onClick="buttonFunction"
                android:layout_weight="0.25"/>

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:text="@string/createAccount"
                android:gravity="center"
                android:textSize="16sp"
                android:onClick="clickFunction"
                android:layout_weight="0.25"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </FrameLayout>
</ScrollView>